# serverbrige

./: CMakeLists.txt  README.md  sources.cmake  specializedmessages.cpp  specializedmessages.h
cmake/: include.cmake  sources.cmake  test.cmake
docs/: README.md  client-server.md
src/: eventmessage.cpp  eventmessage.h  messagemanager.cpp  messagemanager.h  messageobserver.cpp  messageobserver.h  querymessage.cpp  querymessage.h  specializedmessages.cpp  specializedmessages.h
